--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         
         <section class="firstview">
             <div class="video-box overlay">
+                <div class="scrolldown2"><span>Scroll</span></div>
                 <video class="video" muted autoplay loop playsinline>
                   <source src="videos/top.mp4" type="video/mp4">
                 </video>
