--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="wrap">
         <img src="images/bg1.svg" alt="" class="bg1">
         <img src="images/bg4.svg" alt="" class="bg2">
+        <img src="images/bg1.svg" alt="" class="bg3">
+        <img src="images/bg4.svg" alt="" class="bg4">
         
         <section class="firstview">
             <div class="video-box overlay">
